# pygef

./: .buildinfo  .coveragerc  .flake8  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.txt  Makefile  README.md  __init__.py  bench.py  cemsdev.toml  cliff.toml  gef.py  genindex.html  gitlab-ci.yml  index.html  mypy.ini  objects.inv  pyproject.toml  requirements.txt  requirements_docs.txt  requirements_lint.txt  search.html  searchindex.js  setup.py  tests.py
.doctrees/: environment.pickle  index.doctree
.doctrees/tree/: getting_started.doctree  reference.doctree
.github/: dependabot.yml  renovate.json
.github/workflow/: unit_tests.yaml
.github/workflows/: deploy_docs.yaml  release_pypi.yaml  rust.yaml  test.yaml  unit_tests_black.yaml
_modules/: index.html
_modules/pygef/: bore.html  cpt.html  plotting.html  shim.html
_modules/pygef/gef/: bore.html  cpt.html
_sources/tree/: getting_started.rst.txt
_static/: documentation_options.js
docs/: conf.py  index.rst
docs/_static/css/: index.css
docs/tree/: getting_started.rst  reference.rst
pygef/: __init__.py  base.py  bore.py  broxml.py  cpt.py  exceptions.py  expressions.py  extension.py  gef.py  geo.py  group_classification.py  grouping.py  plot.html  plot.py  plot_cpt.py  plot_utils.py  plotting.py  shim.py  soil.py  tests.py  utils.py
pygef/been_jefferies/: __init__.py  tests.py  util.py
pygef/been_jeffrey/: __init__.py  tests.py  util.py
pygef/broxml/: __init__.py  bore.py  cpt.py  parse_bore.py  parse_cpt.py  resolvers.py  xml_parser.py
pygef/gef/: bore.py  gef.py  plot_utils.py  utils.py
pygef/resources/: isbhr-gt-messages_v1.xsd  isbhr-gt-messages_v2.1.xsd
pygef/robertson/: __init__.py  cpt.gef  new_robertson .py  robertson.py  run_robertson.py  tests.py  tests_robertson.py  util.py
pygef/test_files/: bore.xml  cpt4.gef
pygef/test_files/cpt_xml/: example.xml
pygef/tests/: conftest.py  test_shim.py
pygef/tests/gef/: tests.py
pygef/tests/xml/: test_bore.py  test_cpt.py
src/: error.rs  header.rs  lib.rs  nom.rs
src/pygef/: __init__.py  _version.py  bore.py  common.py  cpt.py  exceptions.py  plotting.py  shim.py
src/pygef/broxml/: __init__.py  mapping.py  parse_bore.py  parse_cpt.py  resolvers.py  xml_parser.py
src/pygef/gef/: bore.py  cpt.py  expressions.py  gef.py  geo.py  mapping.py  parse_bore.py  parse_cpt.py  utils.py
test_files/: cpt.gef  example_bore.gef
test_files/bore_xml/: DP14+074_MB_KR.xml  DP65+005_HB_VL.xml  DP94+062_HB_VL.xml  bore.xml
tests/: conftest.py  test_shim.py
tests/gef/: test_gef.py  tests.py
tests/test_files/: cpt5.gef  cpt_class_high.gef  cpt_pre_excavated.gef  cpt_voids.gef
tests/test_files/bore_xml/: BHR000000336600.xml  DP14+074_MB_KR.xml  DP65+005_HB_VL.xml  DP94+062_HB_VL.xml  bore.xml
tests/test_files/cpt_gef/: cpt.gef  cpt2.gef  cpt3.gef  cpt5.GEF  example.gef
tests/test_files/cpt_xml/: CPT000000155283.xml  example.xml
tests/xml/: test_bore.py  test_cpt.py
tree/: getting_started.html  reference.html
