[package]
name = "gef"
version = "0.1.0"
edition = "2018"

[lib]
# Name of the python module
name = "gef"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10.1"
nom = "7.0.0"
pyo3 = { version = "0.14.4", features = ["extension-module"] }
thiserror = "1.0.26"

[package.metadata.maturin]
python-source = "pygef"

# Automatically add git hooks for code conventions & tests
[dev-dependencies.cargo-husky]
version = "1.5.0"
features = ["precommit-hook", "postmerge-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"]
