[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pygef"
version = "0.13.0"
description = "Parse soil measurument data."
dependencies = ["polars>=1,<2", "lxml>=5,<7.0", "gef-file-to-map>=0.2.1,<0.3"]
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }
readme = "README.md"
keywords = ["gef"]

[project.urls]
repository = "https://github.com/cemsbv/pygef"

[project.optional-dependencies]
plot = ["matplotlib>=3.6,<4.0"]
test = ["coveralls", "pytest"]
docs = [
  "Sphinx",
  "sphinx-autodoc-typehints",
  "ipython",
  "asteroid-sphinx-theme",
  "sphinx_rtd_theme",
]
lint = [
  # https://github.com/super-linter/super-linter/blob/main/dependencies/python/black.txt
  "black==25.1.0",
  # https://github.com/super-linter/super-linter/blob/main/dependencies/python/isort.txt
  "isort==6.0.1",
]
map = ["contextily>=1.3.0,<2"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
files = ["pygef"]
mypy_path = 'src'
namespace_packages = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_subclassing_any = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
  "matplotlib.*",
  "pkg_resources.*",
  "pandas.*",
  "lxml.*",
  "polars.*",
  "numpy.*",
  "gef_file_to_map.*",
  "pytest.*",
  "setuptools.*",
  "contextily.*",
]
ignore_missing_imports = true
